# i2c_keyboard

./: .gitmodules  Architecture.md  CMakeLists.txt  LICENSE  README.md  REORGANIZATION_SUMMARY.md  keyboard_layout.json  power_latch_spec.md  refactor_state_machine.md
include/: button.h  config.h  discrete_keys.h  event.h  fifo.h  i2c_slave.h  keycodes.h  latch.h  layout_default.h  matrix_scan.h  neopixel.h  power_button.h  power_fsm.h  protocol.h
pio/: CMakeLists.txt  neopixel.pio
src/: button.c  button.h  config.c  config.h  digital_mouse.h  discrete_keys.c  event.c  fifo.c  fn_keys.h  i2c_slave.c  i2c_slave.h  latch.c  layout_default.c  led.c  led.h  led_controller.c  led_controller.h  main.c  matrix_scan.c  matrix_scanner.c  neopixel.c  neopixel.pio  power_button.c  power_fsm.c  power_latch.c  power_latch.h  ws2812.pio
src/app/: led_controller.c  main.c
src/core/: tick.c  tick.h
src/hardware/: button.c  button.h  i2c_slave.c  led.c  led.h  power_latch.c  power_latch.h  ws2812.pio
src/input/: digital_mouse.c  fn_keys.c  key_fifo.c  key_fifo.h  matrix_scanner.h  modifier_manager.c  modifier_manager.h  switch_tracker.c  switch_tracker.h
test/host_tools/: README.md  i2c_dump.py
tests/: switch_tracker_test.c
